--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "gp1",
-    "slug": "gp1",
+    "name": "VMS",
+    "slug": "VMS",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
