--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gp1",
+  "name": "VMS",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.14",
     "@react-navigation/native-stack": "^6.9.2",
+    "axios": "^1.2.0",
     "expo": "~47.0.7",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
