--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "axios": "^1.2.0",
     "cors": "^2.8.5",
     "expo": "~47.0.7",
+    "expo-dev-client": "~2.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
@@ -27,9 +31,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.9",
-    "expo-splash-screen": "~0.17.5",
-    "expo-dev-client": "~2.0.1"
+    "react-native-web": "~0.18.9"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
