--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
+    "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/drawer": "^6.5.3",
-    "@react-navigation/native": "^6.0.14",
+    "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.2",
     "axios": "^1.2.0",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "http": "^0.0.1-security",
     "https": "^1.0.0",
     "react": "18.1.0",
+    "react-devtools": "^4.27.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dropdown-select-list": "^2.0.2",
@@ -30,8 +32,11 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-stack": "^1.0.0-alpha11",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.9"
+    "react-native-web": "~0.18.9",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
