--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@expo/webpack-config": "^0.17.2",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/drawer": "^6.5.3",
+    "@react-navigation/material-top-tabs": "^6.5.1",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.2",
-    "axios": "^1.2.0",
+    "axios": "^1.2.1",
     "cors": "^2.8.5",
     "expo": "~47.0.7",
     "expo-dev-client": "~2.0.1",
@@ -21,6 +22,7 @@
     "expo-status-bar": "~1.4.2",
     "http": "^0.0.1-security",
     "https": "^1.0.0",
+    "jotai": "^1.11.2",
     "react": "18.1.0",
     "react-devtools": "^4.27.0",
     "react-dom": "18.1.0",
@@ -28,11 +30,13 @@
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-maps": "^1.3.2",
+    "react-native-pager-view": "^6.0.1",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-stack": "^1.0.0-alpha11",
+    "react-native-tab-view": "^3.3.4",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4",
