--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dropdown-select-list": "^2.0.2",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-maps": "^1.3.2",
     "react-native-pager-view": "^6.0.1",
