--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-devtools": "^4.27.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-date-picker": "^4.2.6",
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~2.8.0",
