--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.1.0",
     "react-devtools": "^4.27.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.41.5",
     "react-native": "0.70.5",
     "react-native-date-picker": "^4.2.6",
     "react-native-dropdown-select-list": "^2.0.2",
