--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-maps": "^1.3.2",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-pager-view": "^6.0.1",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "~2.12.0",
